# netApp

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/utils/: mod.rs
static/: index.html
static/css/: style.css
static/js/: chat.js
vue-client/: .eslintrc.js  package-lock.json  package.json
vue-client/public/: index.html
vue-client/src/: App.vue  main.js
vue-client/src/components/: LoginPanel.vue  MessagePanel.vue  SidePanel.vue
vue-client/src/components/chat/: ChatContainer.vue  NetworkMonitor.vue  Sidebar.vue
vue-client/src/router/: index.js
vue-client/src/services/: websocket.js
vue-client/src/store/: index.js
vue-client/src/stores/: chat.js
vue-client/src/views/: AboutView.vue  ChatView.vue
