[package]
name = "net_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-ws = "0.2.5"
tokio = { version = "1.29.0", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = "0.4.26"
log = "0.4.19"
env_logger = "0.10.0"
rand = "0.8.5"